(feat|mock) mock pay cva
